# qtcsv

./: .gitignore  CMakeLists.txt  QtCsv.pc.in  QtCsvConfig.cmake.in  README.md  plan.md
include/: QCsv.hpp
src/: QCsv.cpp
tests/: CMakeLists.txt  test.cpp
